First MQTT Connection!

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,11 @@
 platform = espressif32
 board = m5stick-c
 framework = arduino
+monitor_speed = 115200 ; Set your desired baud rate here
 lib_deps =
   m5stack/M5StickCPlus
   bblanchon/ArduinoJson
+  knolleary/PubSubClient
   links2004/WebSockets
   powerbroker2/SafeString
   robtillaart/RunningAverage
