Migrate to M5Unified.

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = m5stick-c
 framework = arduino
 monitor_speed = 115200 ; Set your desired baud rate here
 lib_deps =
-  m5stack/M5StickCPlus
+  m5stack/M5Unified
   bblanchon/ArduinoJson
   knolleary/PubSubClient
   links2004/WebSockets
