Wired Selectable Input, Rearranged Tally Screen

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,7 @@ lib_deps =
   robtillaart/RunningAverage
   ropg/ezTime
   tzapu/WiFiManager
+
+build_flags =
+    -DMQTT_MAX_PACKET_SIZE=1024
+    -DMQTT_KEEPALIVE=60
